# STG

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/: FEM_Parser.hpp  Math.hpp  STG_CompMatrix.hpp  STG_FiniteElementsMesh.hpp  STG_FlowField.hpp  STG_Generator.hpp  STG_Vector.hpp  STG_VelocityVector.hpp
src/lib/stg/: FEM_Parser.cpp  Math.cpp  STG_CompMatrix.cpp  STG_FiniteElementsMesh.cpp  STG_FlowField.cpp  STG_Vector.cpp  STG_VelocityVector.cpp
src/lib/tests/: CMakeLists.txt  FEM_FinElemMesh_tests.cpp  Math_tests.cpp  STG_FlowField_tests.cpp  STG_Generator_tests.cpp  STG_Vector_tests.cpp  STG_Velocity_tests.cpp  TestsHeader.hpp  main.cpp
test_resources/: coarse_triangle.vtk  triangle_1000.vtk
